@startuml
'https://plantuml.com/class-diagram

abstract class NhanVienf88
class ChuTich
class NhanVien
class MainF88
NhanVienf88 <|-- ChuTich
NhanVienf88 <|-- NhanVien
NhanVienf88 "*" <.. MainF88
NhanVien ---> NhanVienf88: capTren

abstract class NhanVienf88{
    String ten
    String chucVu
    int hanMucXuLyVay
    +{abstract} NhanVienf88 capcaohon(NhanVienf88 nv)
    +{abstract} String xuLyKhoanVay(int tienVay)
}
class NhanVien{
    + String xuLyKhoanVay(int tienVay)
}
class MainF88{
}
note right of NhanVien::xuLyKhoanVay
    - Kiểm Tra nếu tienvay < hanMucXuLyVay
      - Trả về: Chức vụ, tên, xử lý khoản vay
         (VD: bảo vệ Hoàng xử lý khoản vay 500.000)
    - Ngược lại: Chuyển công việc xử lý vay cho cấp trên
end note

note right of NhanVienf88::capcaohon
    - Gán Nv cho biến capTren
      - Trả về: CapTren
    - Chú ý: không cài đặt đối với lớp chuTich
end note

note right of MainF88
    - Tạo các đối tượng NhanVienf88 thuộc lớp nhanVien
    - Tạo một đối tượng NhanVienf88 thuộc lớp chuTich
    - Kết nối chuỗi các đối tượng
    - gọi phương thức xuLyKhoanVay trên đối tượng đầu tiên của chuỗi
end note
@enduml